--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - main
     paths:
       - 'input.csv'
-      - 'iptest'  # 监控 iptest 二进制
+      - 'iptest'
       - 'iptest.sh'
   pull_request:
     branches:
@@ -53,7 +53,6 @@ jobs:
             od -c iptest.sh
           else
             echo "No iptest.sh in repository, creating new one"
-            # 创建 iptest.sh（根目录，调用 ./iptest）
             printf '#!/bin/sh\n' > iptest.sh
             printf './iptest || {\n' >> iptest.sh
             printf '  echo "iptest binary failed or missing, generating fallback ip.csv"\n' >> iptest.sh
@@ -88,7 +87,7 @@ jobs:
       - name: Run proxy IP check
         timeout-minutes: 10
         run: |
-          export SHLVL=1  # 重置 SHLVL
+          export SHLVL=1
           echo "Start time: $(date)"
           echo "开始时间: $(date)"
           python3 ip-filter-speedtest-api.py
@@ -98,7 +97,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add ip.txt ip.csv ips.txt speedtest.log country_cache.json || echo "Some files missing"
+          git add ip.txt ip.csv ips.txt speedtest.log speedtest_details.log country_cache.json || echo "Some files missing"
           git commit -m "Update generated files from proxy IP check" || echo "No changes to commit"
           git push || echo "No changes to push"
 
@@ -112,4 +111,5 @@ jobs:
             ip.csv
             ips.txt
             speedtest.log
+            speedtest_details.log
             country_cache.json
