--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,14 +47,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests charset-normalizer geoip2==4.8.0 maxminddb>=2.0.0 packaging>=21.3
 
-      - name: Prepare iptest.sh and iptest
+      - name: Run IP test using iptest.sh
+        timeout-minutes: 15  # 测速可能耗时，设置超时
         run: |
-          pwd
-          ls -la
+          echo "Start time: $(date)"
+          echo "开始时间: $(date)"
+          # 准备并运行 iptest.sh
           if [ -f iptest.sh ]; then
             echo "Found existing iptest.sh:"
             cat iptest.sh
-            file iptest.sh
           else
             echo "No iptest.sh, creating new one"
             printf '#!/bin/sh\n' > iptest.sh
@@ -67,23 +68,18 @@ jobs:
             printf '}\n' >> iptest.sh
           fi
           chmod +x iptest.sh
-          ls -l iptest.sh
-          cat iptest.sh
           if [ -f iptest ]; then
             chmod +x iptest
             echo "iptest binary found"
           else
             echo "iptest binary not found, using fallback in iptest.sh"
           fi
-          ls -l iptest || echo "iptest binary missing"
-
-      - name: Test iptest.sh
-        run: |
           ./iptest.sh
+          echo "End time: $(date)"
+          echo "结束时间: $(date)"
           cat ip.csv || echo "ip.csv not generated"
 
-      - name: Run proxy IP check
-        timeout-minutes: 15  # 增加超时时间到15分钟
+      - name: Process IP test results
         env:
           REAL_TIME_LOG: "true"  # 启用逐行打印，便于调试
         run: |
