--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ on:
 jobs:
   proxy-ip-check:
     runs-on: ubuntu-latest
+    env:
+      PYTHONUNBUFFERED: "1"  # 禁用 Python 输出缓冲，确保实时日志
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -74,18 +76,18 @@ jobs:
           else
             echo "iptest binary not found, using fallback in iptest.sh"
           fi
-          ./iptest.sh
+          stdbuf -oL ./iptest.sh  # 使用 stdbuf 禁用缓冲，确保实时输出
           echo "End time: $(date)"
           echo "结束时间: $(date)"
           cat ip.csv || echo "ip.csv not generated"
 
       - name: Process IP test results
         env:
-          REAL_TIME_LOG: "true"  # 启用逐行打印，便于调试
+          REAL_TIME_LOG: "true"  # 保留原环境变量
         run: |
           echo "Start time: $(date)"
           echo "开始时间: $(date)"
-          python3 ip-filter-speedtest-api.py || echo "Python script failed"
+          stdbuf -oL python3 ip-filter-speedtest-api.py || echo "Python script failed"  # 使用 stdbuf 确保 Python 脚本输出实时
           echo "End time: $(date)"
           echo "结束时间: $(date)"
 
